updated android code, code cleanup, added new API

--- a/android/src/main/res/layout/activity_web_view.xml
+++ b/android/src/main/res/layout/activity_web_view.xml
@@ -8,6 +8,15 @@
     android:orientation="vertical"
     tools:context=".WebViewActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_gravity="top"
+        android:progress="0"
+        android:visibility="gone" />
+
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
