updated android and ios options, added downloader on android, fixed back-button webview android

--- a/android/src/main/res/menu/menu_main.xml
+++ b/android/src/main/res/menu/menu_main.xml
@@ -44,6 +44,6 @@
         android:id="@+id/menu_search"
         android:title="@string/menu_search"
         appcompat:actionViewClass="android.widget.SearchView"
-        appcompat:showAsAction="ifRoom" />
+        appcompat:showAsAction="ifRoom|withText" />
 
 </menu>
